Revision history for Perl extension WebService::Solr.

0.02  XXX
    - fix pager creation

0.01  Tue Oct 07 2008
    - original version;